--- a/app/src/main/res/layout/jey_dialog_progress.xml
+++ b/app/src/main/res/layout/jey_dialog_progress.xml
@@ -6,9 +6,9 @@
     android:orientation="vertical" >
 
     <ProgressBar
-        style="@style/loading"
+        style="@style/jey_loading"
         android:layout_width="80dip"
         android:layout_height="80dip"
-        android:padding="22dip" />
+        android:scaleType="centerInside" />
 
 </LinearLayout>
