--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,9 @@
     <color name="colorTr">#00FFFFFF</color>
     <color name="colorRed">#FFFF0000</color>
     <color name="colorWhite">#FFFFFFFF</color>
+    <color name="colorWhiteHalf">#88FFFFFF</color>
     <color name="colorBlack">#FF000000</color>
+    <color name="colorBlackHalf">#88000000</color>
     <color name="colorBlue">#FF0000FF</color>
     <color name="colorJeY">#FF006934</color>
     <color name="colorJeYHalf">#88006934</color>
