--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,11 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:statusBarColor" tools:targetApi="21">?attr/colorPrimaryDark</item>
     </style>
+    <style name="jey_dialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:statusBarColor" tools:targetApi="21">?attr/colorPrimaryDark</item>
+    </style>
 
     <style name="TranslucentTheme" parent="@android:style/Theme.Translucent.NoTitleBar">
         <item name="android:actionBarStyle" tools:targetApi="14">@style/NormalActionBar</item>
@@ -44,6 +49,11 @@
     </style>
     <style name="loading">
         <item name="android:indeterminateDrawable">@drawable/tdialog_progress_ani</item>
+        <item name="android:indeterminateBehavior">repeat</item>
+        <item name="android:indeterminateDuration">400</item>
+    </style>
+    <style name="jey_loading">
+        <item name="android:indeterminateDrawable">@drawable/jey_progress_ani</item>
         <item name="android:indeterminateBehavior">repeat</item>
         <item name="android:indeterminateDuration">400</item>
     </style>
