--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
         <item name="android:colorPrimary" tools:targetApi="21">@color/colorPrimary</item>
         <item name="android:colorPrimaryDark" tools:targetApi="21">@color/colorPrimaryDark</item>
         <item name="android:windowDrawsSystemBarBackgrounds" tools:targetApi="21">true</item>
-        <item name="android:statusBarColor" tools:targetApi="21">#ff99a3dd</item>
+        <item name="android:statusBarColor" tools:targetApi="21">@color/colorJeY</item>
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     <style name="JeYTranslucentTheme" parent="@android:style/Theme.Translucent.NoTitleBar">
@@ -26,7 +26,7 @@
         <item name="android:colorPrimary" tools:targetApi="21">@color/colorPrimary</item>
         <item name="android:colorPrimaryDark" tools:targetApi="21">@color/colorPrimaryDark</item>
         <item name="android:windowDrawsSystemBarBackgrounds" tools:targetApi="21">true</item>
-        <item name="android:statusBarColor" tools:targetApi="21">#ff99a3dd</item>
+        <item name="android:statusBarColor" tools:targetApi="21">@color/colorJeY</item>
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     <style name="JeYActionBar" tools:targetApi="14" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
